[package]
name = "vtt"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true
opt-level = "z"
debug = false
panic = "abort"

[dependencies]
bevy = { version = "0.13.2", features = ["wayland"] }
bevy-inspector-egui = "0.24.0"
bevy_egui = { version = "0.27.0", features = ["immutable_ctx"] }
bevy_infinite_grid = "0.12.0"
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator.git", version = "0.1.0" }
bevy_mod_picking = "0.18.2"
image =  { version = "0.24.9", default-features = false }
lightyear = "0.15.1"
rand = "0.8.5"
serde = "1.0.203"
